--- a/assets/scss/main2.scss
+++ b/assets/scss/main2.scss
@@ -78,7 +78,7 @@
     }
 
     code, pre {
-        @apply bg-gray-500 text-white py-1 px-2 rounded-md;
+        @apply text-sm bg-gray-500 text-white py-1 px-2 rounded-md;
         display: inline;
     }
 
