Add initial set of partner project docs

--- a/themes/docsy/layouts/shortcodes/partnerDocsTemplate.html
+++ b/themes/docsy/layouts/shortcodes/partnerDocsTemplate.html
@@ -50,7 +50,7 @@
         </tr>
         <tr>
             <td><strong>Base URL</strong></td>
-            <td><a href="https://api.covalenthq.com/v1/">https://api.covalenthq.com/v1/</a></td>
+            <td><a href="https://api.covalenthq.com/v1">https://api.covalenthq.com/v1</a></td>
         </tr>
         <tr>
             <td><strong>Networks & <code>chain_id</code></strong></td>
