--- a/themes/docsy/layouts/shortcodes/partnerDocsTemplate.html
+++ b/themes/docsy/layouts/shortcodes/partnerDocsTemplate.html
@@ -1,4 +1,4 @@
-<h1>Introduction</h1>
+<h1>Covalent</h1>
 
 <p><a href='https://www.covalenthq.com/?utm_source={{ .Get "blockchain" }}&utm_medium=partner-docs'>Covalent</a> provides a unified API to bring full transparency and visibility to assets across all blockchain networks including {{ .Get "blockchain" }}.</p>
 <p>To get started, sign up for an <a href='https://www.covalenthq.com/platform/?utm_source={{ .Get "blockchain" }}&utm_medium=partner-docs'><strong>API Key</strong></a>. </p>
