--- a/themes/docsy/layouts/shortcodes/onDexPartnerDocsTemplate.html
+++ b/themes/docsy/layouts/shortcodes/onDexPartnerDocsTemplate.html
@@ -1,6 +1,6 @@
 <h1>Covalent</h1>
 
-<p><a href='https://www.covalenthq.com/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Covalent</a> provides a unified API to bring full transparency and visibility to assets across all blockchains. The Covalent API is used to power parts of the <a href='{{ .Get "website"}}' target="_blank">{{ .Get "dex" }} analytics dashboard</a></p>
+<p><a href='https://www.covalenthq.com/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Covalent</a> provides a unified API to bring full transparency and visibility to assets across all blockchains. The Covalent API can be used to build the <a href='{{ .Get "website"}}' target="_blank">{{ .Get "dex" }} analytics dashboard.</a></p>
 <p>To get started, sign up for a <a href='https://www.covalenthq.com/platform/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank"><strong>Covalent API Key</strong></a>. </p>
 
 <table>
@@ -63,7 +63,7 @@
 <p>Try the key endpoints directly in your browser from the <a href='https://www.covalenthq.com/docs/api/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs#/0/0/USD/{{ .Get "apiReferenceChain" }}' target="_blank">API Reference</a>.
 
 <h2>Build Analytics Dashboards</h2>
-<p>Here is a breakdown of the the specific API endpoints that are used, or can be used, to build the {{ .Get "dex" }} analytics dashboard:</p>
+<p>Here is a breakdown of the the specific API endpoints that can be used to build the {{ .Get "dex" }} analytics dashboard:</p>
 
 <img src='/static/images/project-showcase/{{ .Get "dex" | lower }}/{{ .Get "dex" | lower }}-analytics.png' alt="Analytics screenshot">
 
@@ -104,7 +104,7 @@
 <a href='https://github.com/covalenthq/dex-dashboard-template?utm_source={{ .Get "dex" | lower  }}&utm_medium=partner-docs' target="_blank"><img src='/static/images/project-showcase/{{ .Get "dex" | lower }}/dex-dashboard-{{ .Get "dex" | lower }}.png' alt="Dex dashboard screenshot"></a>
 <p>Template repo:<a href='https://github.com/covalenthq/dex-dashboard-template?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">https://github.com/covalenthq/dex-dashboard-template</a></p>
 
-<p>This code template is a showcase of the <code> XY=K</code> suite of Covalent API endpoints powering DEX dashboards such as {{ .Get "dex" }}. The code is open source and forkable for anyone to customize it.</p>
+<p>This code template is a showcase of the <code> XY=K</code> suite of Covalent API endpoints capable of powering DEX dashboards. The code is open source and forkable for anyone to customize it.</p>
 
 <h2>Resources</h2>
 <p>Here are some additional resources to help you get started with the Covalent API:</p>
