Template cleanup & add stellaswap

--- a/themes/docsy/layouts/shortcodes/onDexPartnerDocsTemplate.html
+++ b/themes/docsy/layouts/shortcodes/onDexPartnerDocsTemplate.html
@@ -52,9 +52,9 @@
             <td><strong>Key Endpoints</strong></td>
             <td>
                 <br>- <a href='https://www.covalenthq.com/docs/api/#/0/Get%20XY=K%20pools/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex"}} pools</a> 
-                <br> - <a href='https://www.covalenthq.com/docs/api/#/0/Get%20transactions%20for%20address/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex" }} network exchange tokens</a> 
-                <br> - <a href='https://www.covalenthq.com/docs/api/#/0/Get%20ERC20%20token%20transfers%20for%20address/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex" }} transactions for exchange</a> 
-                <br> - <a href='https://www.covalenthq.com/docs/api/#/0/Get%20token%20holders%20as%20of%20any%20block%20height/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex" }} ecosystem chart data</a> 
+                <br> - <a href='https://www.covalenthq.com/docs/api/#/0/Get%20XY=K%20network%20exchange%20tokens/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex" }} network exchange tokens</a> 
+                <br> - <a href='https://www.covalenthq.com/docs/api/#/0/Get%20XY=K%20transactions%20for%20exchange/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex" }} transactions for exchange</a> 
+                <br> - <a href='https://www.covalenthq.com/docs/api/#/0/Get%20XY=K%20ecosystem%20chart%20data/USD/{{ .Get "apiReferenceChain" }}/?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">Get {{ .Get "dex" }} ecosystem chart data</a> 
             </td>
         </tr>
     </tbody>
@@ -102,7 +102,7 @@
 
 <h2>Code Template</h2>
 <a href='https://github.com/covalenthq/dex-dashboard-template?utm_source={{ .Get "dex" | lower  }}&utm_medium=partner-docs' target="_blank"><img src='/static/images/project-showcase/{{ .Get "dex" | lower }}/dex-dashboard-{{ .Get "dex" | lower }}.png' alt="Dex dashboard screenshot"></a>
-<p>Template repo:<a href='https://github.com/covalenthq/dex-dashboard-template?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">https://github.com/covalenthq/dex-dashboard-template</a></p>
+<p>Template repo: <a href='https://github.com/covalenthq/dex-dashboard-template?utm_source={{ .Get "dex" | lower }}&utm_medium=partner-docs' target="_blank">https://github.com/covalenthq/dex-dashboard-template</a></p>
 
 <p>This code template is a showcase of the <code> XY=K</code> suite of Covalent API endpoints capable of powering DEX dashboards. The code is open source and forkable for anyone to customize it.</p>
 
